first push age-calculator

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ul>
       <li>
         <a href="./qr-code-component">QR-Code Component</a>
+        <a href="./age-calculator">Age Calculator</a>
       </li>
     </ul>
   </body>
