--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <ul>
       <li>
         <a href="./qr-code-component">QR-Code Component</a>
-        <a href="./age-calculator">Age Calculator</a>
+      </li>
+      <li>
+        <a href="./age-calculator/dist">Age Calculator</a>
       </li>
     </ul>
   </body>
