--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <li>
         <a href="./age-calculator/dist">Age Calculator</a>
       </li>
+      <li>
+        <a href="./notifications-page/dist">Notifications Page</a>
+      </li>
     </ul>
   </body>
 </html>
