first push ip-address-tracker

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <li>
         <a href="./notifications-page/dist">Notifications Page</a>
       </li>
+      <li>
+        <a href="./ip-address-tracker/dist">IP Address Tracker</a>
+      </li>
     </ul>
   </body>
 </html>
